# larch

./: .appveyor.yml  .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CNAME  README.md  README.rst  appveyor.yml  azure-pipelines.yml  bibliography.html  build_configuration.py  build_docs.sh  bump_patch.sh  bumpversion.cfg  compiling.html  data-frames.html  data-fundamentals.html  data-pods.html  data.html  dataservice.html  elm_swig_external.h  genindex.html  getting-started.html  index.html  installation.html  intro.html  linear-functions.html  math.html  model.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  seedling-35.yml  seedling-36.yml  setup.py  (+13 more)
Larch/: Larch.1  main.cpp
Larch.xcodeproj/: project.pbxproj
_images/: graphviz-2bad354fcbda1614a20bf1415bc2772639d393f4.png.map
_modules/: index.html
_sources/: data-fundamentals.rst.txt  data.rst.txt  getting-started.rst.txt  index.rst.txt  installation.md  intro.md  model.rst.txt
_static/: documentation_options.js  larch_rtfd.css  switcher.json
api/: dataframes.html  dataset.html  datatree.html  linear.html  model.html  modelgroup.html  nesting.html  ~data.html  ~models.html
book/: _build.sh  _config.yml  _toc.yml  installation.md  intro.md  references.bib
conda-recipe/: build.sh  conda_build_config.yaml  conda_upload.sh  meta.yaml
condabuild/: conda_build_config.yaml  meta.yaml
doc/: .buildinfo  conf.py  data-fundamentals.html  data-fundamentals.rst  data-in-models.rst  data-services.html  data.rst  databases.rst  (+23 more)
(+1072 files in other folders)
