[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "oldest-supported-numpy",
    "Cython",
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --nbmake --disable-warnings --doctest-modules --ignore=larch/util/visual_processing.py"
testpaths = [
    "tests",
    "book/example",
    "larch",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
